# build-my-own-x

./: .gitignore  README.md
3D Renderer/How_OpenGL_works:_software_rendering_in_500_lines_of_code/: CMakeLists.txt
3D Renderer/How_OpenGL_works:_software_rendering_in_500_lines_of_code/include/: geometry.h  tgaimage.h
3D Renderer/How_OpenGL_works:_software_rendering_in_500_lines_of_code/src/: Lesson0.cpp  Lesson1.cpp  Lesson2.cpp  Lesson3-1.cpp  Lesson3-2.cpp  Lesson4.cpp  Lesson5.cpp  geometry.cpp  model.cpp  tgaimage.cpp
3D Renderer/Introduction_to_Ray_Tracing:_a_Simple_Method_for_Creating_3D_Images/: CMakeLists.txt  main.cpp  minray.cpp  raytracer.cpp
3D_Renderer/How_OpenGL_works:_software_rendering_in_500_lines_of_code/: CMakeLists.txt
3D_Renderer/How_OpenGL_works:_software_rendering_in_500_lines_of_code/include/: our_gl.h
3D_Renderer/How_OpenGL_works:_software_rendering_in_500_lines_of_code/src/: main.cpp  our_gl.cpp
3D_Renderer/How_OpenGL_works_software_rendering_in_500_lines_of_code/: CMakeLists.txt  README.md
3D_Renderer/How_OpenGL_works_software_rendering_in_500_lines_of_code/include/: geometry.h  model.h  our_gl.h  tgaimage.h
3D_Renderer/How_OpenGL_works_software_rendering_in_500_lines_of_code/src/: geometry.cpp  main.cpp  model.cpp  our_gl.cpp  tgaimage.cpp
3D_Renderer/Introduction_to_Ray_Tracing:_a_Simple_Method_for_Creating_3D_Images/: README.md
3D_Renderer/Introduction_to_Ray_Tracing_a_Simple_Method_for_Creating_3D_Images/: CMakeLists.txt  minray.cpp  raytracer.cpp
Augmented Reality/Augmented Reality with Python and OpenCV/: README.md
Augmented Reality/Augmented Reality with Python and OpenCV/sample/: findHomography_test.py  orb_test.py
Augmented_Reality/Augmented Reality with Python and OpenCV/: README.md  ar_main.py
Augmented_Reality/Augmented Reality with Python and OpenCV/sample/: feature_matching_test.py  findHomography_test.py  orb_test.py
Augmented_Reality/Augmented Reality with Python and OpenCV/src/: __init__.py  objloader_simple.py
BitTorrent Client/Write your own bittorrent client/: package-lock.json  package.json
BitTorrent Client/Write your own bittorrent client/src/: index.ts  torrent-parser.ts  tracker.ts  util.ts
BitTorrent_Client/Write your own bittorrent client/: README.md  package-lock.json  package.json  tsconfig.json
Command-Line_Tool/Visualize_your_local_git_contributions_with_Go/: main.go  stats.go
(+16 files in other folders)
